--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #spring.datasource.username=root
 #spring.datasource.password=123456
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kiss-document?characterEncoding=utf-8&useSSL=false
+
+# 超时配置
+zuul.host.socket-timeout-millis=60000
+zuul.host.connect-timeout-millis=10000
+
