--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,9 @@ server.port=8100
 
 # 服务中心地址
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-zuul.host.socket-timeout-millis=60000
-zuul.host.connect-timeout-millis=10000
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-# 数据源配置
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=123456
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kiss-document?characterEncoding=utf-8&useSSL=false
+
 
 # 超时配置
-zuul.host.socket-timeout-millis=60000
-zuul.host.connect-timeout-millis=10000
+ribbon.ConnectTimeout=60000
+ribbon.ReadTimeout=60000
 
